# RA-Crew

./: .env.example  .gitignore  .nojekyll  README.md  index.html  pyproject.toml  requirements.txt  test_crew_verbosity.cmd  test_improvements.cmd
.github/: copilot-instructions.md
examples/: companies.example  metrics.example  section_hints.def14a.json
hints/: default.json
prompts/: agents.yaml  tasks.yaml
ra_agent/: __init__.py  __main__.py  cli.py
ra_agent/agents/: crew.py
ra_agent/tools/: calculator.py  cleaning.py  exporter.py  extraction.py  extraction_llm.py  rag.py  sec_edgar.py  validation.py
ra_agent/utils/: identifiers.py  logging_utils.py
ra_crew/: __init__.py  cli.py  config.py
ra_crew/agents/: crew.py
ra_crew/tools/: __init__.py  agent_tools.py  calculator.py  cleaning.py  extraction.py  extraction_llm.py  rag.py  sec_edgar.py  validation.py
ra_crew/utils/: prompt_loader.py
slides/: index.html  index.qmd  style.css  template.qmd  tikzjax.html
utils/: ticker.txt
